# Coacher

./: .gitignore  README.md  alembic.ini  data.db  main.py  pyproject.toml  requirements.txt  run  server.py  tasks_out.txt
alembic/versions/: a565b12469ed_init_database.py
coacher/: __init__.py  crud.py  database.py  models.py  schemas.py
coacher/views/: main.py  tasks.py
templates/: dashboard.html  guardians.html  layout.html
tests/: test_coacher.py
