[tool.poetry]
name = "coacher"
version = "0.1.0"
description = "Basic CRUD app to manage player and parent contact details for sports team"
authors = ["Colm Harrington<colm.harrington@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
sqlalchemy = "^1.4.0"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
